--- a/perfil-luis-pimienta.html
+++ b/perfil-luis-pimienta.html
@@ -61,7 +61,7 @@
   <!-- CONTACTO -->
   <div class="section-title">Información de Contacto</div>
   <div class="data-box">
-    <p style="margin:0;">📩 jurixsistemsas@outlook.com</p>
+    <p style="margin:0;">📩 jurixsis-gerente@outlook.com</p>
     <p style="margin:0;">📩 jurixsistemsas.contacto@gmail.com</p>
     <p style="margin:0;">📱 WhatsApp: +57 3012564208</p>
   </div>
@@ -69,31 +69,29 @@
   <!-- PERFIL PROFESIONAL -->
   <div class="section-title">Perfil Profesional</div>
   <div class="data-box">
-    <p>Aquí escribirás tu breve presentación profesional.</p>
+    <p>Abogado, Especialista en Derecho Laboral y de la Seguridad Social e Ingeniero de Sistemas.</p>
   </div>
 
   <!-- EXPERIENCIA -->
   <div class="section-title">Experiencia</div>
   <div class="data-box">
-    <p>*</p>
-    <p>*</p>
-    <p>*</p>
+    <p>21 años de experiencia en el sector de las Tecnologías de la Información (TI)</p>
+    <p>Coordinador de Sistemas</p>
+    <p>Ingeniero de Sistemas, con más de 22 años de experiencia en el sector de las Tecnologías de la Información (TI), liderando y gestionando equipos técnicos en entornos corporativos de alto nivel. Amplia trayectoria como Coordinador de Sistemas, Administrador de Operaciones IT y Soporte en Campo, con sólidas habilidades en administración de infraestructura tecnológica, gestión de servicios de TI, soporte técnico, administración y gestión de accesos, calidad y continuidad operativa. Orientado a resultados, con enfoque en la mejora continua, resolución efectiva de incidentes y optimización de recursos tecnológicos. Alta capacidad de liderazgo, comunicación efectiva y adaptación a entornos cambiantes</p>
   </div>
 
   <!-- FORMACIÓN -->
   <div class="section-title">Formación Académica</div>
   <div class="data-box">
-    <p>*</p>
-    <p>*</p>
-    <p>*</p>
+    <p>Abogado, Egresado de la Universidad Rafael Nuñez Barranquilla</p>
+    <p>Ingeniero de Sistemas Agresado de la Universidad Abierta y a Distancia UNAD</p>
+    <p>Analista Programador de Computadores, Egresado de la Universidad del Litoral</p>
   </div>
 
   <!-- ESPECIALIZACIONES -->
   <div class="section-title">Especializaciones</div>
   <div class="data-box">
-    <p>*</p>
-    <p>*</p>
-    <p>*</p>
+    <p>Especialista en Derecho Laboral Egresado de la Universidad Libre Barranquilla</p>
   </div>
 
 </div>
