--- a/perfil-luis-pimienta.html
+++ b/perfil-luis-pimienta.html
@@ -75,7 +75,7 @@
   <!-- EXPERIENCIA -->
   <div class="section-title">Experiencia</div>
   <div class="data-box">
-    <p>Abogado con más de 13 años de experiencia como abogado litigante, asesor y consultor juridico externo en empresas privadas</p>
+    <p>Abogado con más de 10 años de experiencia como abogado litigante, atendiendo casos de asuntos laborales, familia, comercial y civil ante juzgados y Mintrabajo; asesor y consultor juridico externo en empresas privadas</p>
     <p>Ingeniero de Sistemas, con más de 22 años de experiencia en el sector de las Tecnologías de la Información (TI), liderando y gestionando equipos técnicos en entornos corporativos de alto nivel. Amplia trayectoria como Coordinador de Sistemas, Administrador de Operaciones IT y Soporte en Campo, con sólidas habilidades en administración de infraestructura tecnológica, gestión de servicios de TI, soporte técnico, administración y gestión de accesos, calidad y continuidad operativa. Orientado a resultados, con enfoque en la mejora continua, resolución efectiva de incidentes y optimización de recursos tecnológicos. Alta capacidad de liderazgo, comunicación efectiva y adaptación a entornos cambiantes</p>
   </div>
 
