--- a/perfil-luis-pimienta.html
+++ b/perfil-luis-pimienta.html
@@ -48,7 +48,7 @@
 
   <div>
     <h1 style="font-size:30px; font-weight:700; margin:0;">Luis Carlos Pimienta Henao</h1>
-    <p style="font-size:18px; margin:4px 0 0;">Abogado Laboralista / Ingeniero de Sistemas</p>
+    <p style="font-size:18px; margin:4px 0 0;">Gerente</p>
   </div>
 
 </div>
