--- a/perfil-paola-tovar.html
+++ b/perfil-paola-tovar.html
@@ -1,1 +1,52 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Perfil - Paola Patricia Tovar Ariza</title>
+  <link rel="stylesheet" href="assets/css/style.css">
+</head>
+<body>
+
+<!-- HERO Bajo -->
+<section class="profile-hero" style="
+  height:25vh;
+  background-image:
+    linear-gradient(rgba(6,22,40,0.55),rgba(6,22,40,0.85)),
+    url('assets/img/equipo-paola-tovar.png');
+  background-size:cover;
+  background-position:center;
+  display:flex;
+  align-items:center;
+  color:#fff;
+">
+  <div class="container">
+    <h1 class="profile-title">Perfil Profesional</h1>
+  </div>
+</section>
+
+
+<!-- CUERPO PERFIL -->
+<section class="profile-body">
+  <div class="container">
+    <div class="row" style="display:flex;align-items:center;margin-top:40px;">
+
+      <!-- FOTO PERFIL RECTANGULAR -->
+      <div class="col-4" style="text-align:center;">
+        <img src="assets/img/equipo-paola-tovar.png" alt="Paola Patricia Tovar" style="width:100%;max-width:260px;border-radius:12px;">
+      </div>
+
+      <!-- NOMBRE Y CARGO -->
+      <div class="col-8">
+        <h2 style="font-size:32px;color:#0D3B66;margin-bottom:4px;">Paola Patricia Tovar Ariza</h2>
+        <h3 style="font-size:20px;color:#0D3B66;margin-top:0;">Subgerente</h3>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+
+</body>
+</html>
 
