--- a/equipo.html
+++ b/equipo.html
@@ -221,7 +221,7 @@
 
     <!-- Card 2 -->
     <div class="col">
-      <a href="perfil-miembro.html" style="text-decoration:none;">
+      <a href="perfil-paola-tovar.html" style="text-decoration:none;">
         <div class="card h-100" style="background:#AAD4F1; border:none;">
           <img src="assets/img/equipo2.png" class="card-img-top" alt="Foto">
           <div class="card-body text-center">
