--- a/perfil-paola-tovar.html
+++ b/perfil-paola-tovar.html
@@ -1,52 +1,99 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Perfil - Paola Patricia Tovar Ariza</title>
-  <link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Perfil — Paola Patricia Tovar Ariza</title>
 
-<!-- HERO Bajo -->
-<section class="profile-hero" style="
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <style>
+    body{font-family: 'Arial', sans-serif;}
+
+    /* HERO Bajo */
+.profile-hero{
   height:25vh;
-  background-image:
-    linear-gradient(rgba(6,22,40,0.55),rgba(6,22,40,0.85)),
-    url('assets/img/equipo-paola-tovar.png');
-  background-size:cover;
-  background-position:center;
+  background: linear-gradient(180deg, #0E2A48 0%, #061628 100%);
   display:flex;
   align-items:center;
   color:#fff;
-">
-  <div class="container">
-    <h1 class="profile-title">Perfil Profesional</h1>
+}
+
+    .section-title{
+      color:#0D3B66;
+      margin:28px 0 14px;
+      font-weight:700;
+      font-size:22px;
+    }
+
+    .data-box{
+      background:#f7faff;
+      border:1px solid #e6eef6;
+      border-radius:8px;
+      padding:18px;
+      margin-bottom:20px;
+    }
+  </style>
+</head>
+<body>
+
+<!-- HERO -->
+<section class="profile-hero">
+  <div class="container d-flex align-items-center">
+  
+  <div class="me-4">
+    <img src="assets/img/equipo-paola-tovar.png" style="width:120px; height:auto; border-radius:12px; box-shadow:0 4px 12px rgba(0,0,0,0.45);">
   </div>
+
+  <div>
+    <h1 style="font-size:30px; font-weight:700; margin:0;">Paola Patricia Tovar Ariza</h1>
+    <p style="font-size:18px; margin:4px 0 0;">Subgerente</p>
+  </div>
+
+</div>
+
 </section>
 
 
-<!-- CUERPO PERFIL -->
-<section class="profile-body">
-  <div class="container">
-    <div class="row" style="display:flex;align-items:center;margin-top:40px;">
+<div class="container my-5">
 
-      <!-- FOTO PERFIL RECTANGULAR -->
-      <div class="col-4" style="text-align:center;">
-        <img src="assets/img/equipo-paola-tovar.png" alt="Paola Patricia Tovar" style="width:100%;max-width:260px;border-radius:12px;">
-      </div>
-
-      <!-- NOMBRE Y CARGO -->
-      <div class="col-8">
-        <h2 style="font-size:32px;color:#0D3B66;margin-bottom:4px;">Paola Patricia Tovar Ariza</h2>
-        <h3 style="font-size:20px;color:#0D3B66;margin-top:0;">Subgerente</h3>
-      </div>
-
-    </div>
+  <!-- CONTACTO -->
+  <div class="section-title">Información de Contacto</div>
+  <div class="data-box">
+    <p style="margin:0;">📩 jurixsis-subgerente@outlook.com</p>
+    <p style="margin:0;">📩 jurixsistemsas.contacto@gmail.com</p>
   </div>
-</section>
 
+  <!-- PERFIL PROFESIONAL -->
+  <div class="section-title">Perfil Profesional</div>
+  <div class="data-box">
+    <p>Administradora de Empresas</p>
+  </div>
+
+  <!-- EXPERIENCIA -->
+  <div class="section-title">Experiencia</div>
+  <div class="data-box">
+    <p>***</p>
+    <p>***</p>
+  </div>
+
+  <!-- FORMACIÓN -->
+  <div class="section-title">Formación Académica</div>
+  <div class="data-box">
+    <p>- Administradora de Empresas, Egresada de la Corporación Universidad de la Costa CUC</p>  
+  </div>
+
+  <!-- ESPECIALIZACIONES -->
+  <div class="section-title">Especializaciones</div>
+  <div class="data-box">
+    <p>***</p>
+  </div>
+
+</div>
+
+<!-- JS bootstrap -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
-</html>
 
