--- a/equipo.html
+++ b/equipo.html
@@ -223,7 +223,7 @@
     <div class="col">
       <a href="perfil-paola-tovar.html" target="_blank">
         <div class="card h-100" style="background:#AAD4F1; border:none;">
-          <img src="assets/img/equipo2.png" class="card-img-top" alt="Foto">
+          <img src="assets/img/equipo-paola-tovar.png" class="card-img-top" alt="Foto">
           <div class="card-body text-center">
             <h5 class="card-title" style="font-weight:700;">Paola Patricia Tovar Ariza</h5>
             <p style="margin:0;">Subgerente</p>
