--- a/perfil-paola-tovar.html
+++ b/perfil-paola-tovar.html
@@ -74,20 +74,20 @@
   <!-- EXPERIENCIA -->
   <div class="section-title">Experiencia</div>
   <div class="data-box">
-    <p>***</p>
-    <p>***</p>
+    <p>Tres años de experiencia como gerente y representante legal en la empresa TOV BUSINESS S.A.S</p>
+    <p></p>
   </div>
 
   <!-- FORMACIÓN -->
   <div class="section-title">Formación Académica</div>
   <div class="data-box">
-    <p>- Administradora de Empresas, Egresada de la Corporación Universidad de la Costa CUC</p>  
+    <p>- Administradora de Empresas, Egresada de la Corporación Universidad de la Costa - CUC</p>  
   </div>
 
   <!-- ESPECIALIZACIONES -->
-  <div class="section-title">Especializaciones</div>
+  <div class="section-title"></div>
   <div class="data-box">
-    <p>***</p>
+    <p></p>
   </div>
 
 </div>
