--- a/juridicos.html
+++ b/juridicos.html
@@ -221,42 +221,42 @@
 
   <div class="cards">
 
-    <div class="service-card" style="background:#D0F0F2;">
+    <div class="service-card" style="background:#AAD4F1;">
       <h3>Asesoría Especializada en Derecho Laboral</h3>
       <p>*</p>
       <p>*</p>
       <p>*</p>
     </div>
 
-    <div class="service-card" style="background:#D0F0F2;">
+    <div class="service-card" style="background:#AAD4F1;">
       <h3>Asesoría Legal Empresarial</h3>
       <p>*</p>
       <p>*</p>
       <p>*</p>
     </div>
 
-    <div class="service-card" style="background:#D0F0F2;">
+    <div class="service-card" style="background:#AAD4F1;">
       <h3>Elaboración y revisión de contratos</h3>
       <p>*</p>
       <p>*</p>
       <p>*</p>
     </div>
 
-    <div class="service-card" style="background:#D0F0F2;">
+    <div class="service-card" style="background:#AAD4F1;">
       <h3>Capacitación en Normatividad Laboral</h3>
       <p>*</p>
       <p>*</p>
       <p>*</p>
     </div>
 
-    <div class="service-card" style="background:#D0F0F2;">
+    <div class="service-card" style="background:#AAD4F1;">
       <h3>Representación Jurídica</h3>
       <p>*</p>
       <p>*</p>
       <p>*</p>
     </div>
 
-    <div class="service-card" style="background:#D0F0F2;">
+    <div class="service-card" style="background:#AAD4F1;">
       <h3>Atención en Derecho de Familia, Civil y Comercial</h3>
       <p>*</p>
       <p>*</p>
