--- a/tecnologicos.html
+++ b/tecnologicos.html
@@ -123,7 +123,7 @@
       color:#eef6ff;
       min-height:110px;
     }
-    .service-card h3 { color:#CDAA6D; margin-bottom:8px; font-size:18px; }
+    .service-card h3 { color:#1D3154; margin-bottom:8px; font-size:18px; }
     .service-card p { color:#dbeaf8; font-size:14px; }
 
     /* Why choose us */
