--- a/juridicos.html
+++ b/juridicos.html
@@ -223,9 +223,9 @@
 
     <div class="service-card" style="background:#AAD4F1;">
       <h3>Asesoría Especializada en Derecho Laboral</h3>
-      <p>Auditoria laboral preventiva</p>
-      <p>Elaboración de reglamentos internos y políticas de SST</p>
-      <p>Asesoría en despidos, liquidaciones y conflictos sindicales</p>
+      <p>✅ Auditoria laboral preventiva</p>
+      <p>✅ Elaboración de reglamentos internos y políticas de SST</p>
+      <p>✅ Asesoría en despidos, liquidaciones y conflictos sindicales</p>
     </div>
 
     <div class="service-card" style="background:#AAD4F1;">
