--- a/juridicos.html
+++ b/juridicos.html
@@ -124,7 +124,7 @@
       min-height:110px;
     }
     .service-card h3 { color:#1D3154; margin-bottom:8px; font-size:18px; }
-    .service-card p { color:#dbeaf8; font-size:14px; }
+    .service-card p { color:#1D3154; font-size:14px; }
 
     /* Why choose us */
     .why { padding:48px 0; background:#fff; color:#222; border-top:1px solid #eef2f6; border-bottom:1px solid #eef2f6; }
