--- a/juridicos.html
+++ b/juridicos.html
@@ -1,4 +1,4 @@
-<!doctype html>
+resentación <!doctype html>
 <html lang="es">
 <head>
   <meta charset="utf-8" />
@@ -230,36 +230,25 @@
 
     <div class="service-card" style="background:#AAD4F1;">
       <h3>Asesoría Legal Empresarial</h3>
-      <p>*</p>
-      <p>*</p>
-      <p>*</p>
-    </div>
-
-    <div class="service-card" style="background:#AAD4F1;">
-      <h3>Elaboración y revisión de contratos</h3>
-      <p>*</p>
-      <p>*</p>
+      <p>✅ Representación juridica</p>
+      <p>✅ Elaboración y revisión de contratos</p>
       <p>*</p>
     </div>
 
     <div class="service-card" style="background:#AAD4F1;">
       <h3>Capacitación en Normatividad Laboral</h3>
-      <p>*</p>
-      <p>*</p>
-      <p>*</p>
+      <p>✅ Actualización laboral</p>
+      <p>✅ Salud y seguridad en el trabajo (SST)</p>
+      <p>✅ Acoso laboral</p>
+      <p>✅ Contratación y nómina</p>
+      <p>✅ Acoso laboral entre otros temas</p>
     </div>
 
-    <div class="service-card" style="background:#AAD4F1;">
-      <h3>Representación Jurídica</h3>
-      <p>*</p>
-      <p>*</p>
-      <p>*</p>
-    </div>
-
+   
     <div class="service-card" style="background:#AAD4F1;">
       <h3>Atención en Derecho de Familia, Civil y Comercial</h3>
-      <p>*</p>
-      <p>*</p>
+      <p>✅ Divorcios</p>
+      <p>✅ Obligaciones alimentarias</p>
       <p>*</p>
     </div>
 
