--- a/juridicos.html
+++ b/juridicos.html
@@ -226,13 +226,14 @@ resentación <!doctype html>
       <p>✅ Auditoria laboral preventiva</p>
       <p>✅ Elaboración de reglamentos internos y políticas de SST</p>
       <p>✅ Asesoría en despidos, liquidaciones y conflictos sindicales</p>
+      <p>✅ Asesoría en contratación y tercerización</p>
     </div>
 
     <div class="service-card" style="background:#AAD4F1;">
       <h3>Asesoría Legal Empresarial</h3>
       <p>✅ Representación juridica</p>
       <p>✅ Elaboración y revisión de contratos</p>
-      <p>*</p>
+      <p></p>
     </div>
 
     <div class="service-card" style="background:#AAD4F1;">
@@ -243,13 +244,22 @@ resentación <!doctype html>
       <p>✅ Contratación y nómina</p>
       <p>✅ Acoso laboral entre otros temas</p>
     </div>
-
    
     <div class="service-card" style="background:#AAD4F1;">
       <h3>Atención en Derecho de Familia, Civil y Comercial</h3>
       <p>✅ Divorcios</p>
       <p>✅ Obligaciones alimentarias</p>
-      <p>*</p>
+      <p>✅ Constitución y organización de empresas</p>
+      <p>✅ Asuntos notariales</p>
+      <p>✅ Propiedad y derechos reales</p>
+
+          <div class="service-card" style="background:#AAD4F1;">
+      <h3>Para Personas</h3>
+      <p>✅ Reclamaciones por despido injustificado</p>
+      <p>✅ Revisión de contratos de trabajos</p>
+      <p>✅ Cálculo de liquidaciones</p>
+      <p>✅ Asuntos notariales</p>
+      <p>✅ Asesoría en pensiones y seguridad social</p>      
     </div>
 
   </div>
