--- a/juridicos.html
+++ b/juridicos.html
@@ -242,7 +242,7 @@ resentación <!doctype html>
       <p>✅ Salud y seguridad en el trabajo (SST)</p>
       <p>✅ Acoso laboral</p>
       <p>✅ Contratación y nómina</p>
-      <p>✅ Acoso laboral entre otros temas</p>
+      <p>✅ Obligaciones y derechos laborales</p>
     </div>
    
     <div class="service-card" style="background:#AAD4F1;">
