--- a/juridicos.html
+++ b/juridicos.html
@@ -203,7 +203,7 @@ resentación <!doctype html>
       <div class="col-lg-8">
         <h2 style="color:#F5F5F5; font-size:34px; margin-bottom:8px;">Servicios Jurídicos</h2>
         <p style="color:#dbeaf8; font-size:15px; margin-bottom:12px;">
-          Asesoría legal estratégica con enfoque empresarial y laboral.
+          Asesoría legal estratégica con enfoque empresarial, laboral y personal.
         </p>
         <a href="contacto.html" class="btn btn-primary-cta">Solicitar consulta</a>
       </div>
