--- a/tecnologicos.html
+++ b/tecnologicos.html
@@ -223,50 +223,40 @@
 
     <div class="service-card" style="background:#AAD4F1;">
       <h3>Desarrollo de Software a la medida</h3>
-      <p>*</p>
-      <p>*</p>
-      <p>*</p>
+      <p>✅ Aplicaciones empresariales</p>
+      <p>✅ Páginas web profesionales y tiendas online</p>
+      <p>✅ Aplicaciones móviles (Android & iOS)</p>      
     </div>
 
     <div class="service-card" style="background:#AAD4F1;">
-      <h3>Administración de redes</h3>
-      <p>*</p>
-      <p>*</p>
-      <p>*</p>
+      <h3>Redes</h3>
+      <p>✅ Diseño e implementación de redes</p>
+      <p>✅ Administración de redes</p>
     </div>
 
     <div class="service-card" style="background:#AAD4F1;">
       <h3>Transformación Digital y Consultorías TI</h3>
-      <p>*</p>
-      <p>*</p>
-      <p>*</p>
+      <p>✅ Análisis y rediseño de procesos con apoyo tecnológico</p>
+      <p>✅ Implementación de soluciones en la nube (Azure, AWS, Google Cloud)</p>
+      <p>✅ Integración de sistemas y migración de datos</p>
     </div>
 
     <div class="service-card" style="background:#AAD4F1;">
       <h3>Seguridad Informática y Protección de Datos</h3>
-      <p>*</p>
-      <p>*</p>
-      <p>*</p>
+      <p>✅ Auditorías de ciberseguridad</p>
+      <p>✅ Implementación de políticas de seguridad digital</p>
     </div>
 
     <div class="service-card" style="background:#AAD4F1;">
-      <h3>Comercio Electrónico y presencia Digital</h3>
-      <p>*</p>
-      <p>*</p>
-      <p>*</p>
-    </div>
-
-    <div class="service-card" style="background:#AAD4F1;">
-      <h3>Mantenimiento Preventivo/Correctivo</h3>
-      <p>*</p>
-      <p>*</p>
-      <p>*</p>
+      <h3>Soporte a equipos de computo</h3>
+      <p>✅ Soporte técnico y mantenimiento de computadores</p>
+      <p>✅ Administración de hardware y software</p>
+      <p>✅ Instalación y configuración de hardware y software</p>
+      <p>✅ Diseño e implementación de mesas de ayuda</p>
     </div>
 
   </div>
 </section>
-
-
 
   <!-- FOOTER -->
   <footer class="site-footer">
