--- a/contacto.html
+++ b/contacto.html
@@ -8,6 +8,10 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
+  <!-- FontAwesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+
+
   <!-- Main CSS (mantén o reemplaza assets/css/style.css con el que te entregué) -->
   <link rel="stylesheet" href="assets/css/style.css" />
 
@@ -194,29 +198,37 @@
 
     <div style="display:grid;grid-template-columns:1fr 360px;gap:22px;margin-top:18px">
       <div class="form-card">
-        <form action="https://formsubmit.co/jurixsistemsas@outlook.com" method="POST">
-          <input type="hidden" name="_captcha" value="false">
-          <input class="input" type="text" name="name" placeholder="Nombre completo" required>
-          <input class="input" type="email" name="email" placeholder="Correo electrónico" required>
-          <input class="input" type="text" name="empresa" placeholder="Empresa (opcional)">
-          <input class="input" type="text" name="telefono" placeholder="Teléfono (opcional)">
-          <textarea name="mensaje" placeholder="Escribe tu consulta..." required></textarea>
-          <button class="btn" type="submit">Enviar mensaje</button>
-        </form>
+       <!-- FORMULARIO CONTACTO -->
+        <form id="contactForm" action="https://formsubmit.co/jurixsistemsas.contacto@gmail.com" method="POST">
+
+         <!-- OBSERVACIÓN: este hidden evita captcha -->
+         <input type="hidden" name="_captcha" value="false">
+
+         <!-- OBSERVACIÓN: _next vacío para que NO redireccione a otra página -->
+         <input type="hidden" name="_next" value="">
+
+        <input class="input" type="text" name="name" placeholder="Nombre completo" required>
+        <input class="input" type="email" name="email" placeholder="Correo electrónico" required>
+        <input class="input" type="text" name="empresa" placeholder="Empresa (opcional)">
+        <input class="input" type="text" name="telefono" placeholder="Teléfono (opcional)">
+        <textarea name="mensaje" placeholder="Escribe tu consulta..." required></textarea>
+
+        <!-- OBSERVACIÓN: id del botón para poder disparar el modal -->
+        <button id="btnEnviarContacto" class="btn" type="submit" style="background:#0D3B66;color:#fff;">Enviar</button>
+
+      </form>
+
       </div>
 
-      <aside class="form-card">
-        <h4>Información</h4>
-        <p><strong>Jurix & Sistem S.A.S.</strong></p>
-        <p>Calle 120 No. 31-86 — Barranquilla, Colombia</p>
-        <p>jurixsistemsas@outlook.com</p>
-        <p>jurixsistemsas.contacto@gmail.com</p>
-        <p>WhatsApp: <a href="https://wa.me/573012564208" target="_blank" rel="noopener" style="color:var(--azul)">+57 3012564208</a></p>
-      </aside>
+      <div class="container my-4 text-center" style="font-size:1.1rem;">
+          <p><i class="fa-solid fa-location-dot"></i> Calle 120 No. 31-86 — Barranquilla, Colombia</p>
+          <p><i class="fa-solid fa-envelope"></i> jurixsistemsas@outlook.com</p>
+          <p><i class="fa-solid fa-envelope-circle-check"></i> jurixsistemsas.contacto@gmail.com</p>
+          <p><i class="fa-brands fa-whatsapp"></i> +57 3012564208</p>
+     </div>
+
     </div>
   </main>
-
-
 
   <!-- FOOTER -->
   <footer class="site-footer">
@@ -231,4 +243,39 @@
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
+<script>
+document.addEventListener("DOMContentLoaded", function() {
+  const sendBtn = document.getElementById("btnEnviarContacto");
+  const modalSuccess = new bootstrap.Modal(document.getElementById("modalSuccess"));
+  
+  sendBtn.addEventListener("click", function() {
+    // aquí iría el código de la validación y envío real
+    // por ahora solo lanzamos el modal inmediatamente
+
+    modalSuccess.show();
+  });
+
+  // cuando cierre el modal → refresh de la página
+  document.getElementById("btnCerrarModalSuccess").addEventListener("click", function() {
+    location.reload();
+  });
+});
+</script>
+
+  <!-- MODAL ÉXITO -->
+<div class="modal fade" id="modalSuccess" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content" style="border:0; border-radius:12px;">
+      <div class="modal-body text-center p-4">
+        <p style="font-size:18px; font-weight:600; margin:0;">✅ Tu mensaje ha sido enviado exitosamente.</p>
+
+        <button id="btnCerrarModalSuccess" type="button" class="btn mt-4" style="background:#0D3B66; color:#fff;">
+          Cerrar
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+  
 </html>
