--- a/contacto.html
+++ b/contacto.html
@@ -199,7 +199,7 @@
     <div style="display:grid;grid-template-columns:1fr 360px;gap:22px;margin-top:18px">
       <div class="form-card">
        <!-- FORMULARIO CONTACTO -->
-        <form id="contactForm" action="https://formsubmit.co/jurixsistemsas.contacto@gmail.com" method="POST">
+        <form id="contactForm" action="https://formsubmit.co/jurixsistemsas@outlook.com" method="POST">
 
          <!-- OBSERVACIÓN: este hidden evita captcha -->
          <input type="hidden" name="_captcha" value="false">
