--- a/contacto.html
+++ b/contacto.html
@@ -199,9 +199,14 @@
     <div style="display:grid;grid-template-columns:1fr 360px;gap:22px;margin-top:18px">
       <div class="form-card">
        <!-- FORMULARIO CONTACTO -->
-        <form action="https://formsubmit.co/e0106423869532eb22f4e0fc9a5df9f2" method="POST">
-         <input type="hidden" name="_next" value="https://jurixsis-website.github.io/contacto.html?sent=true">
-
+        <form action="https://formsubmit.co/e0106423869532eb22f4e0fc9a5df9 f2" method="POST">
+  
+        <!-- evita captcha -->
+        <input type="hidden" name="_captcha" value="false">
+      
+        <!-- vuelve a la misma página con ?sent=true -->
+        <input type="hidden" name="_next" value="https://jurixsis-website.github.io/contacto.html?sent=true">
+          
          <!-- OBSERVACIÓN: este hidden evita captcha -->
          <input type="hidden" name="_captcha" value="false">
 
