--- a/contacto.html
+++ b/contacto.html
@@ -199,7 +199,7 @@
     <div style="display:grid;grid-template-columns:1fr 360px;gap:22px;margin-top:18px">
       <div class="form-card">
        <!-- FORMULARIO CONTACTO -->
-        <form action="https://formsubmit.co/e0106423869532eb22f4e0fc9a5df9f2" method="POST">
+        <form action="https://formsubmit.co/jurixsistemsas.contacto@gmail.com" method="POST">
 
           <input type="hidden" name="_captcha" value="false">
           <input type="hidden" name="_next" value="https://jurixsis-website.github.io/contacto.html?sent=true">
