--- a/contacto.html
+++ b/contacto.html
@@ -239,6 +239,23 @@
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+<script>
+document.getElementById("formContacto").addEventListener("submit", function(e){
+  const nombre   = document.querySelector('input[name="name"]');
+  const email    = document.querySelector('input[name="email"]');
+  const mensaje  = document.querySelector('textarea[name="mensaje"]');
+
+  // validar si están vacíos
+  if(nombre.value.trim()=="" || email.value.trim()=="" || mensaje.value.trim()==""){
+    e.preventDefault();  // no envía
+    alert("Por favor completa Nombre, Correo y Mensaje antes de enviar.");
+    return false;
+  }
+});
+</script>
+
+  
 </body>
 
 <script>
