--- a/contacto.html
+++ b/contacto.html
@@ -241,7 +241,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 <script>
-document.getElementById("formContacto").addEventListener("submit", function(e){
+document.getElementById("contacto.html").addEventListener("submit", function(e){
   const nombre   = document.querySelector('input[name="name"]');
   const email    = document.querySelector('input[name="email"]');
   const mensaje  = document.querySelector('textarea[name="mensaje"]');
