--- a/contacto.html
+++ b/contacto.html
@@ -232,7 +232,7 @@
   </div>
 </div>
 
-      <div class="container my-4 text-center" style="font-size:1.1rem;">
+     <div class="container my-4" style="font-size:1.1rem; text-align:justify;">
           <p><i class="fa-solid fa-location-dot"></i> Calle 120 No. 31-86 — Barranquilla, Colombia</p>
           <p><i class="fa-solid fa-envelope"></i> jurixsistemsas@outlook.com</p>
           <p><i class="fa-solid fa-envelope-circle-check"></i> jurixsistemsas.contacto@gmail.com</p>
