--- a/perfil-luis-pimienta.html
+++ b/perfil-luis-pimienta.html
@@ -82,15 +82,16 @@
   <!-- FORMACIÓN -->
   <div class="section-title">Formación Académica</div>
   <div class="data-box">
-    <p>- Abogado, Egresado de la Universidad Rafael Nuñez Barranquilla</p>
-    <p>- Ingeniero de Sistemas Agresado de la Universidad Abierta y a Distancia UNAD</p>
-    <p>- Analista Programador de Computadores, Egresado de la Universidad del Litoral</p>
+    <p>- Abogado. Egresado de la Universidad Rafael Nuñez Barranquilla</p>
+    <p>- Ingeniero de Sistemas. Egresado de la Universidad Abierta y a Distancia UNAD</p>
+    <p>- Analista Programador de Computadores. Egresado de la Universidad del Litoral</p>
   </div>
 
   <!-- ESPECIALIZACIONES -->
   <div class="section-title">Especializaciones</div>
   <div class="data-box">
-    <p>- Especialista en Derecho Laboral Egresado de la Universidad Libre Barranquilla</p>
+    <p>- Especialista en Derecho Laboral. Egresado de la Universidad Libre Barranquilla</p>
+    <p>- Docente Universitario. Titulo otorgado por la Universidad Americana</p>
   </div>
 
 </div>
