--- a/perfil-luis-pimienta.html
+++ b/perfil-luis-pimienta.html
@@ -83,7 +83,7 @@
   <div class="section-title">Formación Académica</div>
   <div class="data-box">
     <p>- Abogado. Egresado de la Universidad Rafael Nuñez Barranquilla</p>
-    <p>- Ingeniero de Sistemas. Egresado de la Universidad Abierta y a Distancia UNAD</p>
+    <p>- Ingeniero de Sistemas. Egresado de la Universidad Nacional Abierta y a Distancia - UNAD</p>
     <p>- Analista Programador de Computadores. Egresado de la Universidad del Litoral</p>
   </div>
 
