--- a/index.html
+++ b/index.html
@@ -203,12 +203,12 @@
           <div class="cards">
             
             <div class="service-card">
-              <h3>Asesoría jurídica empresarial y laboral</h3>
-              <p>Contratos, cumplimiento laboral y representación ante autoridades (detalle a convenir).</p>
+              <h3>Asesoría jurídica empresarial</h3>
+              <p>Contratos, cumplimiento laboral, reglamentos, representación ante autoridades (detalle a convenir).</p>
             </div>
             
             <div class="service-card">
-              <h3>Asesoría jurídica personal y laboral</h3>
+              <h3>Asesoría jurídica personal</h3>
               <p>Despido injustificados, pensiones, divorcios, alimentos entre otros temas.</p>
             </div>
 
