--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             
             <div class="service-card">
               <h3>Asesoría jurídica personal</h3>
-              <p>Despido injustificados, pensiones, divorcios, alimentos entre otros temas.</p>
+              <p>Despido injustificados, pensiones, divorcios, alimentos entre otros asuntos.</p>
             </div>
 
             <div class="service-card">
