--- a/nosotros.html
+++ b/nosotros.html
@@ -205,13 +205,16 @@
     </div>
 
     <div class="col-lg-6">
-      <h2 style="color:#0D3B66; margin-bottom:14px;">Reseña Historica</h2>
+      <h2 style="color:#0D3B66; margin-bottom:14px;">Reseña Institucional</h2>
       <p style="color:#374d63; font-size:15px;">
-        Somos una firma interdisciplinaria en Derecho y Tecnología. Conectamos el mundo jurídico con la automatización, los datos y el cumplimiento normativo; logrando que las organizaciones operen de forma segura, eficiente y con menor riesgo legal.
+        Jurix & Sistem S.A.S. nació del compromiso personal y profesional de su fundador, abogado e ingeniero de sistemas, quien decidió transformar los desafíos laborales en una oportunidad para innovar y generar valor. Con amplia experiencia en el ámbito jurídico y tecnológico, surge la idea de crear una empresa que combine ambos mundos: el Derecho y la Tecnología.
       </p>
       <p style="color:#374d63; font-size:15px;">
-        Nuestro trabajo se basa en metodologías y estándares internacionales, integrando procesos, políticas corporativas y soluciones técnicas para que la empresa tome decisiones con información real.
+        Nuestro propósito es aportar soluciones integrales que fortalezcan la confianza digital, promuevan la transformación tecnológica de las organizaciones y contribuyan al desarrollo económico del país mediante la generación de empleo y conocimiento.
       </p>
+     <p style="color:#374d63; font-size:15px;">
+        Más que un emprendimiento, Jurix & Sistem S.A.S. es el reflejo de una visión: independencia profesional con impacto social, orientada a ofrecer servicios legales y tecnológicos con ética, innovación y excelencia.
+     </p>
     </div>
 
     <!-- Columna derecha: tarjetas OBJETIVO / MISION / VISION -->
