--- a/clientes.html
+++ b/clientes.html
@@ -223,8 +223,8 @@
       <div class="col-12">
         <div class="clients-grid">
           <!-- Subir logos a assets/img/clients/cliente1.png etc -->
-          <div class="client-card"><img src="assets/img/clients/cli-gratitour.png" alt="Agencia de Viajes Gratitour"></div>
-          <div class="client-card"><img src="assets/img/clients/cliente2.png" alt="Cliente 2"></div>
+          <div class="client-card"><img src="assets/img/clients/cli-gratitour.png" alt="AGENCIA DE VIAJES GRATITOUR"></div>
+          <div class="client-card"><img src="assets/img/clients/cli-tovbusiness.png" alt="TOV BUSINESS SAS"></div>
           <div class="client-card"><img src="assets/img/clients/cliente3.png" alt="Cliente 3"></div>
           <div class="client-card"><img src="assets/img/clients/cliente4.png" alt="Cliente 4"></div>
           <div class="client-card"><img src="assets/img/clients/cliente5.png" alt="Cliente 5"></div>
