--- a/clientes.html
+++ b/clientes.html
@@ -224,14 +224,11 @@
         <div class="clients-grid">
           <!-- Subir logos a assets/img/clients/cliente1.png etc -->
           <div class="client-card"><img src="assets/img/clients/cli-gratitour.png" alt="AGENCIA DE VIAJES GRATITOUR"></div>
-
-        </div>
-      </div>
-
- <div class="col-13">
-        <div class="clients-grid">
-          <!-- Subir logos a assets/img/clients/cliente1.png etc -->
           <div class="client-card"><img src="assets/img/clients/cli-tovbusiness.png" alt="TOV BUSINESS SAS"></div>
+          <div class="client-card"><img src="assets/img/clients/cliente3.png" alt="Cliente 3"></div>
+          <div class="client-card"><img src="assets/img/clients/cliente4.png" alt="Cliente 4"></div>
+          <div class="client-card"><img src="assets/img/clients/cliente5.png" alt="Cliente 5"></div>
+          <div class="client-card"><img src="assets/img/clients/cliente6.png" alt="Cliente 6"></div>
         </div>
       </div>
       
