--- a/equipo.html
+++ b/equipo.html
@@ -233,7 +233,7 @@
       </a>
     </div>
 
-    <!-- Card 3 -->
+    <!-- Card 3 
     <div class="col">
       <a href="perfil-miembro.html" style="text-decoration:none;">
         <div class="card h-100" style="background:#AAD4F1; border:none;">
@@ -244,9 +244,9 @@
           </div>
         </div>
       </a>
-    </div>
+    </div> -->
 
-    <!-- Card 4 -->
+    <!-- Card 4 
     <div class="col">
       <a href="perfil-miembro.html" style="text-decoration:none;">
         <div class="card h-100" style="background:#AAD4F1; border:none;">
@@ -257,9 +257,9 @@
           </div>
         </div>
       </a>
-    </div>
+    </div> -->
 
-    <!-- Card 5 -->
+    <!-- Card 5 
     <div class="col">
       <a href="perfil-miembro.html" style="text-decoration:none;">
         <div class="card h-100" style="background:#AAD4F1; border:none;">
@@ -270,9 +270,9 @@
           </div>
         </div>
       </a>
-    </div>
+    </div> -->
 
-    <!-- Card 6 -->
+    <!-- Card 6 
     <div class="col">
       <a href="perfil-miembro.html" style="text-decoration:none;">
         <div class="card h-100" style="background:#AAD4F1; border:none;">
@@ -283,7 +283,7 @@
           </div>
         </div>
       </a>
-    </div>
+    </div> -->
 
   </div>
 </section>
