--- a/equipo.html
+++ b/equipo.html
@@ -205,7 +205,7 @@
 <section class="container my-5">
   <div class="row row-cols-1 row-cols-md-4 g-4">
 
-    <!-- Card 1 -->
+    <!-- Card 1 
     <div class="col">
       <a href="perfil-luis-pimienta.html" target="_blank">
         <div class="card h-100" style="background:#AAD4F1; border:none;">
@@ -217,9 +217,9 @@
           </div>
         </div>
       </a>
-    </div>
+    </div> -->
 
-    <!-- Card 2 -->
+    <!-- Card 2 
     <div class="col">
       <a href="perfil-paola-tovar.html" target="_blank">
         <div class="card h-100" style="background:#AAD4F1; border:none;">
@@ -231,7 +231,7 @@
           </div>
         </div>
       </a>
-    </div>
+    </div> -->
 
     <!-- Card 3 
     <div class="col">
