--- a/contacto.html
+++ b/contacto.html
@@ -201,7 +201,9 @@
 
         
        <!-- FORMULARIO CONTACTO -->
-        <form action="https://formsubmit.co/jurixsistemsas.contacto@gmail.com" method="POST">
+        <!-- <form action="https://formsubmit.co/jurixsistemsas.contacto@gmail.com" method="POST"> -->
+       <form id="formContacto" action="https://formsubmit.co/jurixsistemsas.contacto@gmail.com" method="POST">
+
 
           <input type="hidden" name="_captcha" value="false">
           <input type="hidden" name="_next" value="https://jurixsis-website.github.io/contacto.html?sent=true">
